--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".acitivities.MainActivity" />
+        <activity android:name=".acitivities.MainActivity" >
+        </activity>
         <activity android:name=".acitivities.RegisterStuffActivity" />
         <activity android:name=".acitivities.MobileCompanyActivity" />
         <activity android:name=".acitivities.MaintenanceRequestAppleActivity" />
