--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="smartfixsa.com.smartfix">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,21 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".acitivities.MainActivity" >
-        </activity>
+        <activity android:name=".acitivities.MainActivity"></activity>
         <activity android:name=".acitivities.RegisterStuffActivity" />
-        <activity android:name=".acitivities.MobileCompanyActivity" />
+        <activity android:name=".acitivities.MobileCompanyActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".acitivities.MaintenanceRequestAppleActivity" />
         <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
         <activity android:name=".acitivities.StoreListActivity" />
         <activity android:name=".acitivities.MaintenanceCentersListActivity" />
         <activity android:name=".acitivities.MaintenanceCenterDetailsActivity" />
         <activity android:name=".acitivities.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
