--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".acitivities.MainActivity"></activity>
-        <activity android:name=".acitivities.RegisterStuffActivity" />
-        <activity android:name=".acitivities.MobileCompanyActivity" >
+        <activity android:name=".acitivities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".acitivities.RegisterStuffActivity" />
+        <activity android:name=".acitivities.MobileCompanyActivity" >
         </activity>
         <activity android:name=".acitivities.MaintenanceRequestAppleActivity" />
         <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
