retreive data deom firebase to Spinner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,19 @@
         <activity android:name=".acitivities.RegisterStuffActivity" />
         <activity android:name=".acitivities.MobileCompanyActivity" >
         </activity>
-        <activity android:name=".acitivities.MaintenanceRequestAppleActivity"> <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+        <activity android:name=".acitivities.MaintenanceRequestAppleActivity"> </activity>
         <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
         <activity android:name=".acitivities.StoreListActivity" />
-        <activity android:name=".acitivities.MaintenanceCentersListActivity" />
-        <activity android:name=".acitivities.MaintenanceCenterDetailsActivity" />
+        <activity android:name=".acitivities.MaintenanceCentersListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".acitivities.MaintenanceCenterDetailsActivity">
+
+        </activity>
         <activity android:name=".acitivities.SplashActivity">
 
         </activity>
