--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,15 @@
         <activity android:name=".acitivities.RegisterStuffActivity" />
         <activity android:name=".acitivities.MobileCompanyActivity" >
         </activity>
-        <activity android:name=".acitivities.MaintenanceRequestAppleActivity"> <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter> </activity>
+        <activity android:name=".acitivities.MaintenanceRequestAppleActivity">  </activity>
         <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
         <activity android:name=".acitivities.StoreListActivity" />
         <activity android:name=".acitivities.MaintenanceCentersListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".acitivities.MaintenanceCenterDetailsActivity">
