--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
+    implementation ('com.google.android.gms:play-services-location:11.8.0'){
+        exclude group: "com.android.support"
+    }
 
 }
 
