ALi (add data in store list )

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,17 @@
         </activity>
         <activity android:name=".acitivities.MaintenanceRequestAppleActivity">
 
+
+            </activity>
+        <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
+        <activity android:name=".acitivities.StoreListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
-        <activity android:name=".acitivities.MaintenanceRequestOtherActivity" />
-        <activity android:name=".acitivities.StoreListActivity" />
+
+        </activity>
         <activity android:name=".acitivities.MaintenanceCentersListActivity">
 
 
