--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'smartfix'
+            keyPassword 'smartfix'
+            storeFile file('/home/bassiouny/AndroidStudioProjects/SmartFix/app/smartfix.jks')
+            storePassword 'smartfix'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "smartfixsa.com.smartfix"
@@ -37,6 +45,8 @@ dependencies {
     implementation ('com.google.android.gms:play-services-location:11.8.0'){
         exclude group: "com.android.support"
     }
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
 }
 
